--- a/sections/sec5.tex
+++ b/sections/sec5.tex
@@ -34,7 +34,8 @@ If we disable DL8.5’s ability to cache incomplete results, we see a significan
 
 To answer \textbf{Q4}, we repeat these tests on continuous data. For this, we use the same datasets as Verwer and Zhang (2019). These datasets were obtained from the UCI repository\footnote{https://archive.ics.uci.edu/ml/index.php} and are summarized in the first columns of Table \ref{tab:3}. Before running DL8, the CP-based algorithm and DL8.5, we binarize these datasets by creating binary features using the same approach as the one used by Verwer and Zhang (2019). Note that the number of generated features is very high in this case. As a result, for most datasets all algorithms reach a time-out for maximum depths of 3 and 4, as was also shown by Verwer and Zhang (2019). Hence, we focus on results for a depth of 2 in Table \ref{tab:3}. Even though BinOCT uses a specialized technique for solving continuous data, the table shows that DL8.5 outperforms DL8, the CP-based algorithm and BinOCT. Note that the differences between the different variations of DL8.5 are small here, which may not be surprising given the shallowness of the search tree considered.
 
-\begin{table*}\tiny\centering
+\begin{table*}
+	\tiny\centering
 	\begin{tabular}{|L{0.08\linewidth}|*{10}{C{0.03\linewidth}|}|*{2}{C{0.03\linewidth}|}|*{2}{C{0.03\linewidth}|}|*{2}{C{0.03\linewidth}|}}
 		\hline
 		\multirow{3}{*}{Dataset}	& \multirow{3}{*}{nItems}	 & \multirow{3}{*}{nTrans}	& \multicolumn{2}{c|}{BinOCT} &\multicolumn{2}{c|}{DL8}	&\multicolumn{2}{c|}{CP-Based}	& \multicolumn{8}{c|}{DL8.5}		\\
