Referencies ok git add .

--- a/sections/concl.tex
+++ b/sections/concl.tex
@@ -2,5 +2,6 @@
 In this paper we presented the DL8.5 algorithm for learning optimal decision trees. DL8.5 is based on a number of ideas: the use of itemsets to represent paths, the use of a cache to store intermediate results (including results for parts ofthe search tree that have only been traversed partially), theuse of bounds to prune the search space, the ability to useheuristics during the search, and the ability to return a resulteven when a time-out is reached.
 
 Our experiments demonstrated that DL8.5 outperforms existing approaches by orders of magnitude, including approaches presented recently at prominent venues.
-In this paper, we focused our experiments on one particular setting: learning maximally accurate trees of limited depth without support constraints. This was motivated by our desire to compare our new approach with other approaches. However, we believe DL8.5 can be modified for use in other constraint-based decision tree learning problems, using ideas from DL8 (Nijssen and Fromont 2010).\\
+
+In this paper, we focused our experiments on one particular setting: learning maximally accurate trees of limited depth without support constraints. This was motivated by our desire to compare our new approach with other approaches. However, we believe DL8.5 can be modified for use in other constraint-based decision tree learning problems, using ideas from DL8 \cite{nijssen:2010optimal}.\\
 \textbf{Acknowledgements}. This work was supported by Bpost.
