--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,8 @@
 \setlength{\pdfpagewidth}{8.5in}
 \setlength{\pdfpageheight}{11in}
 
+%\usepackage{natbib}
+
 \usepackage{url}
 \usepackage{graphicx}
 \graphicspath{{./images}}
@@ -14,6 +16,7 @@
 \usepackage{subfig}
 \usepackage{multirow}
 \usepackage{rotate}
+
 \usepackage{array}
 \renewcommand{\arraystretch}{1}
 \newcolumntype{R}[1]{>{\raggedleft\arraybackslash}m{#1}}
@@ -57,6 +60,6 @@
 	\input{sections/sec5}
 	\input{sections/concl}
 	
-	\bibliography{Bibliography-File}
+	\bibliography{settings/biblio.bib}
 	\bibliographystyle{settings/aaai}
 \end{document}
